fixed layout breaking and locked on landing page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -3,7 +3,9 @@ body {
 	padding: 0 !important;
 	font-family: "proxima-nova",sans-serif;
   overflow: hidden;
-  overflow-y: scroll;
+  
+  // Comment out below if you want to lock on landing page
+  // overflow-y: scroll;
 }
 
 hr {
@@ -638,7 +640,7 @@ hr {
       font-size: 1em;
     }
 
-    padding-bottom: 150px;
+    padding-bottom: 80px;
     // border-bottom: 2px solid white;
   }
 
